# CddInterface

./: .gitattributes  .gitignore  .travis.yml  CddInterface.la  Dockerfile  LICENSE  Makefile  Makefile.am  Makefile.in  PackageInfo.g  README  README.md  ToDo.txt  VERSION  aclocal.m4  autogen.sh  config.status  configure  configure.ac  init.g  install.sh  libtool  makedoc.g  maketest.g  notebook.ipynb  prerequisites.sh  read.g  update.g  update_website.sh
.github/workflows/: CI.yml
.libs/: CddInterface.la  CddInterface.lai
_data/: package.yml
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
cddlib/: configure.in
doc/: AutoDocMainFile.xml  CddInterface.aux  CddInterface.blg  CddInterface.idx  CddInterface.ilg  CddInterface.ind  CddInterface.out  CddInterface.pnr  CddInterface.tex  CddInterface.toc  CddInterface.xml  Chapter_.xml  Chapter_Attributes_and_properties.xml  Chapter_Creating_polyhedras_and_their_Operations.xml  Chapter_Functions_and_Methods.xml  Chapter_H-representation_and_V-representation_of_polyhedras.xml  Chapter_Intro.xml  Chapter_Introcuction.xml  Chapter_Introduction.xml  Chapter_Linear_Programs.xml  Chapter_attributes_and_properties.xml  Chapter_first.xml  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chap3.html  chap3.txt  chap3_mj.html  chap4.html  chap4.txt  chap4_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html  (+4 more)
etc/: download.sh
examples/: 300x300.g  30x30.g  FourierProjection.g  comparing_polyhedrons.g  demo.g  example1.g  intersection.g  linear_programs.g  minkuwski.g  new.g  new2.g
gap/: Julia.gd  Julia.gi  polyhedra.gd  polyhedra.gi  simplefunctions.gd  simplefunctions.gi  tools.gd  tools.gi
src/: CddInterface.c  CddInterface_la-CddInterface.lo  cdd.c  nothing.c  pkgconfig.h
src/.deps/: CddInterface_la-CddInterface.Plo
tst/: 05.tst  06.tst  07.tst  08.tst  09.tst  11.tst  cddinterface01.tst  cddinterface02.tst  cddinterface03.tst  cddinterface04.tst  cddinterface05.tst  cddinterface06.tst  cddinterface07.tst  cddinterface08.tst  cddinterface09.tst  cddinterface10.tst  cddinterface11.tst  etest_1.g  etest_2.g  etest_2.tst  testall.g
